[package]
name = "qr-link-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
image = "0.25.6"
qrcode = "0.14.1"
rusqlite = { version = "0.35.0", features = ["chrono", "bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
thiserror = { version = "2.0.12" }
tokio = { version = "1.43.0", features = ["full"] }
headers = "0.4.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
